--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile">
           <img src="" alt="">
           <h2 class="hello">Hello</h2>
-          <p class="self-discription">I am a bachelor-student at LMU Munich, majoring in Computational Linguistics. I ❤️ lerning languanges and swimming</p>
+          <p class="self-discription">I am a bachelor-student at LMU Munich, majoring in Computational Linguistics. I ❤️ lerning languages and swimming</p>
         </div>
         <hr>
         <div class="education">
